objects/ssot__AbnExperiment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExperimentSource__c</fullName>
        <label>Experiment Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExperimentState__c</fullName>
        <label>Experiment State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Abn Experiment id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationSchemaId__c</fullName>
        <label>Personalization Schema</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationSchemaType__c</fullName>
        <label>Personalization Schema Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileDataGraphId__c</fullName>
        <label>Profile DataGraph</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartedDateTime__c</fullName>
        <label>Started DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StoppedDateTime__c</fullName>
        <label>Stopped DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720842263518_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AbnExperiment_PersonalizationSchemaI_rel</label>
        <referenceTo>ssot__PersonalizationSchema__dlm</referenceTo>
        <relationshipLabel>AbnExperiment_PersonalizationSchemaI_rel</relationshipLabel>
        <relationshipName>rel_1720842263518_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>